--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
-web-sys = {version="0.3", features = ['Window', 'Document']}
+web-sys = "0.3"
 js-sys = "0.3"
-wasm-logger = "0.2.0"
 
 [workspace]
 members = ["src-tauri"]
