--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,9 +14,10 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-shell = "2.0.0-beta"
 serde_json = "1.0"
-rusqlite = { version = "0.30.0", features = ["serde_json"] } # Check the latest version and adjust accordingly
+rusqlite = { version = "0.30.0", features = ["serde_json", "bundled-sqlcipher"] } # Check the latest version and adjust accordingly
 serde = "1.0"
 serde_derive = "1.0"
+dirs = "5.0.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
