--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ rusqlite = { version = "0.30.0", features = ["serde_json", "bundled-sqlcipher"] 
 serde = "1.0"
 serde_derive = "1.0"
 dirs = "5.0.1"
+uuid = { version = "1.7.0", features = ["v4"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
