--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde = "1.0"
 serde_derive = "1.0"
 dirs = "5.0.1"
 uuid = { version = "1.7.0", features = ["v4"] }
+regex = "1.10.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
