--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde_derive = "1.0"
 dirs = "5.0.1"
 uuid = { version = "1.7.0", features = ["v4"] }
 regex = "1.10.3"
+bcrypt = "0.15.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
